--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="mainWrapper">
     <div class="links">
-      <div class="github"><a href="https://github.com/CodPro-Sui"><img src="../githube.png" alt="gitHube_codPro" /></a></div>
+      <div class="github"><a href="https://github.com/CodPro-Sui"><img src="li.png" alt="gitHube_codPro" /></a></div>
       <div class="allControls"><button type="submit" id="ctrM"><span class="material-symbols-outlined">switch_access</span></button></div>
       <div id="identity"><span class="material-symbols-outlined">info</span></div>
     </div>
